fix some design issues on mobile

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
     line-height: 1.6;
     font-size: 16px;
     color: white;
-    max-width: 450px; /* Keeps paragraph readable */
+    max-width: 450px;
 }
 
 /* ========== BUTTON SECTION ========== */
@@ -289,7 +289,7 @@ body {
         position: fixed;
         top: 0;
         left: -300px;
-        width: 300px;
+        width: 80%;
         height: 100%;
         background: #fffffff8;
         gap: 60px;
@@ -379,14 +379,15 @@ body {
         justify-content: center;
         align-items: center;
         padding: 12% 0 0 0;
-        gap: 100px;
+        gap: 30px;
         flex-wrap: wrap;
         max-width: 1200px;
         width: 100%;
     }
 
     .about-image-wrapper .coffee-post {
-        width: 450px;
+        width: 100%;
+        max-width: 450px;
         height: auto;
         border-radius: 30px;
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
